[gd_scene load_steps=2 format=3 uid="uid://bwq4c1ecavn7k"]

[ext_resource type="Script" path="res://main.gd" id="1_a3oor"]

[node name="main2" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_a3oor")

[node name="Panel" type="Panel" parent="."]
custom_minimum_size = Vector2(200, 300)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Play" type="Button" parent="Panel"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.5
offset_right = 20.5
offset_bottom = 31.0
grow_horizontal = 2
text = "Play
"

[node name="Exit" type="Button" parent="Panel"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -101.5
offset_top = -114.0
offset_right = 101.5
grow_horizontal = 2
grow_vertical = 0
text = "Exit
"

[node name="create_server" type="Button" parent="."]
layout_mode = 0
offset_left = 828.0
offset_top = 86.0
offset_right = 941.0
offset_bottom = 117.0
text = "Create Server
"

[connection signal="pressed" from="Panel/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Panel/Exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="create_server" to="." method="_on_create_server_pressed"]
